<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ODROID Utility</string><string name="action_settings">Settings</string>

    <string name="cpu_title">CPU</string>
    <string name="ddr_title">DDR</string>
    <string name="screen_title">SCREEN</string>
    <string name="rotation_title">ROTATION</string>
    <string name="hdmi_cec_title">HDMI-CEC</string>
    <string name="board_title">BOARD</string>
    <string name="kiosk_title">KIOSK</string>
    <string name="shortcut_title">SHORTCUT</string>

    <string name="ddr_info">Please update boot.ini to display DDR clock.</string>
    <string name="cpu">CPU</string>
    <string name="screen">Screen</string>
    <string name="cpu_governor">CPU Governor</string>
    <string name="cpu_max_freq">CPU Max Frequency</string>
    <string name="cpu_min_freq">CPU Min Frequency</string>
    <string name="cpu_freq">CPU Frequency</string>
    <string name="buttons">Buttons</string>
    <string name="left_handed">Left-handed</string>
    <string name="right_handed">Right-handed</string>
    <string name="mouse">Mouse</string>
    <string name="apply">Save</string>
    <string name="vout_mode">vout mode</string>
    <string name="hdmi">HDMI</string>
    <string name="dvi">DVI</string>
    <string name="resolution">Resolution</string>
    <string name="r1280x800_lcd">1280 x 800 (LCD)</string>
    <string name="r1280x800">1280 x 800 (ODROID-VU)</string>
    <string name="r1920x1080">1920 x 1080</string>
    <string name="r1280x720">1280 x 720</string>
    <string name="apply_reboot">Apply and Reboot</string>
    
    
    <string name="hdmi_phy">HDMI phy</string>
    <string name="fake_fb">LCD Mode ( for ODROID-X/X2 LCD Kit)</string>
    <string name="fb_true">True</string>
    <string name="fb_false">False</string>
    <string name="portrait">HDMI Portrait</string>
    <string name="landscape">HDMI Landscape</string>
    <string name="lcd">LCD</string>
    <string name="p800p59">800P 59Hz</string>
    <string name="p720p50">720P 50Hz</string>
    <string name="p720p60">720P 60hz</string>
    <string name="p1080i60">1080I 60Hz</string>
    <string name="p1080p30">1080P 30Hz</string>
    <string name="p1080i50">1080I 50Hz</string>
    <string name="p1080p50">1080P 50Hz</string>
    <string name="p1080p60">1080P 60Hz</string>
    <string name="r1080x1920">1080 x 1920</string>
    <string name="r720x1080">720 x 1280</string>
    <string name="degree_0">0°</string>
    <string name="degree_180">180°</string>
    <string name="degree_90">90°</string>
    <string name="degree_270">270°</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="left_arrorw">◀</string>
    <string name="right_arrow">▶</string>
    <string name="up_arrow">▲</string>
    <string name="down_arrow">▼</string>
    <string name="zero">0</string>
    <string name="kodi">Auto start KODI on boot.</string>
    <string name="show_all">Show all resolutions.</string>

    <string name="enter_url">Please enter your Android update server URL properly</string>
    <string name="self_adaption">HDMI self-adaption</string>
    <string name="cec_control">CEC Switch</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="one_key_play">One key play</string>
    <string name="auto_change_language">Auto change Language</string>
    <string name="one_key_shutdown">One key shutdown</string>
    <string name="offical_server">Offical Server</string>
    <string name="mirror_server">Mirror Server</string>
    <string name="auto_power_on">Auto power on</string>
    <string name="blue_led">Blue LED</string>

    <string name="kiosk_mode">KIOSK mode</string>

    <string name="shortcut_f7">F7</string>
    <string name="shortcut_f8">F8</string>
    <string name="shortcut_f9">F9</string>
    <string name="shortcut_f10">F10</string>
</resources>
